--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 </head>
 <body>
   <header>
-    <h1>Abdussalam Mohammadu Sinan</h1>
+    <h1>S I N A N MOHAMMAD</h1>
     <p>IT Support Specialist | Colombo, Sri Lanka | <a href="https://www.linkedin.com/in/sinan7" style="color:white; text-decoration: underline;">sinan7@linkedin</a></p>
   </header>
 
