--- a/index.html
+++ b/index.html
@@ -85,14 +85,13 @@
 </head>
 <body>
   <header>
-    <h1>S I N A N MOHAMMAD</h1>
-    <p>IT Support Specialist | Colombo, Sri Lanka | <a href="https://www.linkedin.com/in/sinan7" style="color:white; text-decoration: underline;">sinan7@linkedin</a></p>
+    <h1>SINAN MOHAMMAD</h1>
+    <p>IT Professional</p>
   </header>
 
   <div class="profile-links">
     <h2>
-      Hi!, I'm Sinan<br/>
-      <a href="http://sinan.sms/" target="_blank">sinan.sms</a>
+      Contact Me<br/>
     </h2>
 
     <h3>
