--- a/index.html
+++ b/index.html
@@ -105,7 +105,12 @@
   <section>
     <div class="section-block">
       <h2>Professional Summary</h2>
-      <p>IT Support Specialist with over 9 years of experience in desktop support, asset management, Microsoft 365, and network troubleshooting. Previously worked at DHL Global Forwarding Sri Lanka. Skilled in ServiceNow, Cisco networking, Bomgar remote access, and technical documentation.</p>
+      <p>
+         An experienced IT Professional with over 7 years of combined experience in IT support, IT asset management, 
+         ServiceNow, Microsoft 365, and Azure fundamentals across logistics, IT, construction, and oil & gas sectors. Skilled in 
+         technical issue resolution and end-user support. I am known for my adaptability and ability to thrive in any environment. 
+         Eager to embark on new challenges and contribute my expertise to innovative projects.
+      </p>
     </div>
 
     <div class="section-block">
