--- a/index.html
+++ b/index.html
@@ -116,19 +116,24 @@
     <div class="section-block">
       <h2>Experience</h2>
       <ul>
-        <li><strong>DHL Global Forwarding Sri Lanka</strong> – IT Support Specialist (Jun 2024 – May 2025)</li>
-        <li><strong>Ainsteam Computers</strong> – IT Technician</li>
-        <li><strong>Build Angles Engineering (Pvt) Ltd</strong> – IT & Document Management Assistant</li>
-        <li><strong>Tabaldi Tradings and Contracting WLL, Qatar</strong> – Administrative Assistant</li>
-        <li><strong>NPS Qatar</strong> – Technical Clerk</li>
+        <li><strong>DHL Global Forwarding</strong> – IT Support Engineer | Jun 2024 – May 2025</li>
+        <li><strong>Ainsteam Computers</strong> – IT Technician | Jul 2020 - May 2024</li>
+        <li><strong>Build Angles Engineering (Pvt) Ltd</strong> – IT & Document Management Assistant | Jan 2017 - Dec 2019</li>
+        <li><strong>Tabaldi Tradings and Contracting WLL, Doha - Qatar</strong> – Administrative Assistant | Jan 2016 - Aug 2016</li>
+        <li><strong>National Petroleum Services, Dukhan - Qatar</strong> – Technical Clerk | April 2014 - April 2015</li>
+        <li><strong>ACS Computer Solutions (Pvt) Ltd</strong> – Desktop Support Technician | Jan 2012 - Nov 2013</li>
+        <li><strong>FINZ Japan Cycle Traders (Part Time)</strong> – Invoice Clerk | Oct 2010 - Nov 2011</li>
+        <li><strong>Net Assist International (Intern) </strong> – Trainee Network Engineer | Sep 2010 - Sept 2011</li>
       </ul>
     </div>
 
     <div class="section-block">
       <h2>Certifications</h2>
       <ul>
-        <li>AZ-900: Microsoft Azure Fundamentals (Scheduled – May 25, 2025)</li>
-        <li>MCP, MCTS, MCITP – Windows Server & AD</li>
+        <li>Microsoft Azure Fundamentals (AZ-900)</li>
+        <li>Microsoft Certified Professional (MCP)</li>
+        <li>Microsoft Certified Technology Specialist (MCTS)</li>
+        <li>Computer Hardware & Networking (Comp TIA+)</li>
         <li>Over 25+ certifications from Coursera, LinkedIn Learning, Microsoft Learn</li>
       </ul>
     </div>
