--- a/index.html
+++ b/index.html
@@ -139,6 +139,16 @@
     </div>
 
     <div class="section-block">
+      <h2>Licenses & Certifications</h2>
+      <div class="skills">
+        <span>Introduction to HTML <I>by Sololearn - May 2025</I></span>
+        <span>AI for Beginners <I>by HP Life - March 2025</I></span>
+        <span>Customer Experience (CX) for Business Success <I>by HP Life</I></span>
+        </div>
+    </div>
+  </section>
+
+    <div class="section-block">
       <h2>Skills</h2>
       <div class="skills">
         <span>Microsoft 365</span>
