--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     <div class="section-block">
       <h2>Licenses & Certifications</h2>
       <div class="skills">
-         <li><a Introduction to HTML</li> href="https://api2.sololearn.com/v2/certificates/CC-KKBQEBTR/image/png?t=638828526438730340">Certificate</a>
+         <li>Introduction to HTML | <I>by Sololearn <a href="https://api2.sololearn.com/v2/certificates/CC-KKBQEBTR/image/png?t=638828526438730340"> </a></I></li>
         <span> <I>by Sololearn - May 2025</I></span>
         <span>AI for Beginners <I>by HP Life - March 2025</I></span>
         <span>Customer Experience (CX) for Business Success <I>by HP Life</I></span>
