--- a/index.html
+++ b/index.html
@@ -139,14 +139,36 @@
     </div>
 
     <div class="section-block">
-      <h2>Licenses & Certifications</h2>
-      <div class="skills">
-         <li>Introduction to HTML | <I>by Sololearn <a href="https://api2.sololearn.com/v2/certificates/CC-KKBQEBTR/image/png?t=638828526438730340"> </a></I></li>
-        <span> <I>by Sololearn - May 2025</I></span>
-        <span>AI for Beginners <I>by HP Life - March 2025</I></span>
-        <span>Customer Experience (CX) for Business Success <I>by HP Life</I></span>
-        </div>
-    </div>
+  <h2>Certifications</h2>
+  <ul>
+    <li>
+      <a href="https://learn.microsoft.com/api/credentials/share/en-us/SinanAzureAZ900" target="_blank">
+        Introduction to HTML | <i>by Sololearn</i>
+      </a>
+    </li>
+    <li>
+      <a href="https://www.microsoft.com/en-us/learning/mcp-certification.aspx" target="_blank">
+        AI for Beginners | <i>by Sololearn</i>
+      </a>
+    </li>
+    <li>
+      <a href="https://www.microsoft.com/en-us/learning/mcts-certification.aspx" target="_blank">
+        Microsoft Certified Technology Specialist (MCTS)
+      </a>
+    </li>
+    <li>
+      <a href="https://www.comptia.org/certifications/a" target="_blank">
+        Computer Hardware & Networking (Comp TIA+)
+      </a>
+    </li>
+    <li>
+      <a href="https://api2.sololearn.com/v2/certificates/CC-KKBQEBTR/image/png?t=638828526438730340" target="_blank">
+        Over 25+ certifications from Coursera, LinkedIn Learning, Microsoft Learn, and Sololearn
+      </a>
+    </li>
+  </ul>
+</div>
+
   </section>
 
     <div class="section-block">
