--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
   </section>
 
   <footer>
-    &copy; 2025 Sinan Mohammadu. All Rights Reserved.
+    &copy; 2025 Sinan. All Rights Reserved | Designed with 💻
   </footer>
 </body>
 </html>
