--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+  <meta charset="UTF-8" />
+  <title>Sinan's CV</title>
+  <link rel="stylesheet" href="Style.css" />
+
+
+  </div>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Sinan's CV</title>
+  
   <style>
     
 /* Base Styles */
@@ -15,6 +23,40 @@ body {
   color: #0d0144fd;
   line-height: 1.6;
 }
+
+/* Add vertical bar before section titles */
+h2 {
+  position: relative;
+  padding-left: 20px;
+}
+
+h2::before {
+  content: "|";
+  position: absolute;
+  left: 0;
+  top: 0;
+  font-size: 2rem;
+  line-height: 1;
+  color: #e288f250; /* same color as your h2 text */
+  font-weight: 700;
+}
+
+/* Add vertical bar on the left of section blocks */
+.section-block {
+  position: relative;
+  padding-left: 20px;
+}
+
+.section-block::before {
+  content: "|";
+  position: absolute;
+  left: 0;
+  top: 1.5rem; /* adjust to vertically center */
+  font-size: 2rem;
+  color: rgba(151, 91, 91, 0);
+  font-weight: 700;
+}
+
 
 /* Header */
 header {
@@ -49,7 +91,7 @@ h2 {
   color: #0c0253;
   font-size: 1.8rem;
   margin-bottom: 1rem;
-  text-align: center;
+  text-align: left;
 }
 
 /* Content Box */
