--- a/TechnicalClerk.html
+++ b/TechnicalClerk.html
@@ -8,43 +8,60 @@
         body {
             font-family: Arial, sans-serif;
             margin: 0;
-            background-color: #ffffff;
-            color: #000000;
+            background: linear-gradient(135deg, #00205B, #C8102E);
+            color: #ffffff;
+            min-height: 100vh;
+            background-attachment: fixed;
         }
         header {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            background-color: #53fa05c4; /* DHL Yellow */
+            background: rgba(0, 32, 91, 0.4);
+            backdrop-filter: blur(8px);
             padding: 20px 40px;
+            border-bottom: 1px solid rgba(255, 255, 255, 0.15);
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
         }
         .dhl-header {
             font-size: 18px;
-            color: #0b0900; /* DHL Red */
+            color: #B9D9EB; /* Accent Light Blue */
             font-weight: bold;
         }
         h1 {
-            color: #0f0000;
+            color: #ffffff;
             margin: 0;
         }
         main {
             padding: 40px;
+            margin: 40px;
+            background: rgba(0, 0, 0, 0.25);
+            border-radius: 20px;
+            backdrop-filter: blur(12px);
+            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.4);
         }
         ul {
             list-style-type: disc;
             padding-left: 25px;
         }
         ul li::marker {
-            color: #140276; /* Red bullets */
+            color: #FFCCCB; /* Light Red Marker */
         }
         li {
             margin-bottom: 10px;
         }
         h2 {
-            color: #2e1901;
+            color: #FFDDDD;
         }
         strong {
-            color: #00b928;
+            color: #f1bdbd;
+        }
+        a {
+            color: #B9D9EB;
+            text-decoration: underline;
+        }
+        a:hover {
+            color: #ffffff;
         }
     </style>
 </head>
@@ -57,7 +74,7 @@
 
     <main>
         <p><strong>Company:</strong> National Petroleum Services (NPS Energy)</p>
-            <i>National Petroleum Services (NPS), now part of National Energy Services Reunited - <a href="https://www.nesr.com">NESR</i></a></div>
+        <p><i>National Petroleum Services (NPS), now part of National Energy Services Reunited - <a href="https://www.nesr.com">NESR</a></i></p>
         <p><strong>Duration:</strong> April 2014 - April 2015</p>
 
         <h2>Job Description</h2>
@@ -67,7 +84,6 @@
             <li>Handled time sheets, bonus sheets, and documents for the Coiled Tubing (CT) Department, supporting approximately 100 employees.</li>
             <li>Collaborated with a diverse workforce of over 200 employees across Qatar, representing more than 10 nationalities.</li>
             <li>Achieved a 95% project performance rate, 98% client satisfaction rate, and maintained 100% employee safety through efficient equipment inventory management, maintenance record-keeping, and comprehensive Pre-Job Reports.</li>
-
         </ul>
     </main>
 
