--- a/index.html
+++ b/index.html
@@ -319,25 +319,13 @@ footer {
   <h2>Development & Achievements</h2>
   <ul>
     <li>
-      <a href="https://learn.microsoft.com/api/credentials/share/en-us/SinanAzureAZ900" target="_blank">
-        Introduction to HTML | <i>by Sololearn</i>
+      <a href="https://learn.microsoft.com/en-gb/users/sinan57/transcript/76w58aowrgqg1z2" target="_blank">
+        Microsoft Transcript
       </a>
     </li>
     <li>
-      <a href="https://www.microsoft.com/en-us/learning/mcp-certification.aspx" target="_blank">
-        AI for Beginners | <i>by Sololearn</i>
-      </a>
-    </li>
-    <li>
-      <a href="https://www.microsoft.com/en-us/learning/mcts-certification.aspx" target="_blank">
-        Microsoft Certified Technology Specialist (MCTS)
-      </a>
-    </li>
-    <li>
-      <a href="https://www.comptia.org/certifications/a" target="_blank">
-        Computer Hardware & Networking (Comp TIA+)
-      </a>
-    </li>
+      <a href="https://www.credly.com/users/sinan7" target="_blank">
+        Credly
       </a>
     </li>
   </ul>
