--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ h2::before {
 
 /* Header */
 header {
-  background-color: #fcc501c6;
+  background: linear-gradient(to top, #00a2ed, #0078d4);
   color: #010940;
   padding: 1.5rem 1rem;
   text-align: center;
