--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ footer {
 <body>
   <header>
     <h1>SINAN MOHAMMAD</h1>
-    <p>IT Professional</p>
+    <p>IT Professional | MCP, MCITP, AZ-900</p>
   </header>
 
   <div class="profile-links">
