--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ footer {
 <body>
   <header>
     <h1>SINAN MOHAMMAD</h1>
-    <p>IT Professional | MCP, MCITP, AZ-900</p>
+    <p>IT Support Engineer</p>
   </header>
 
   <div class="profile-links">
@@ -400,3 +400,4 @@ footer {
   </footer>
 </body>
 </html>
+
